# ToyRaft

./: .gitignore  CMakeLists.txt  LICENSE  README.md
conf/: nodes.json  raft.json  server.json
conf/raft/: static.json
conf_test/: raft1.json  raft2.json  raft3.json  raft4.json
conf_test/raft1/: static.json
conf_test/raft2/: dynamic.json  static.json
conf_test/raft3/: static.json
conf_test/raft4/: dynamic.json  static.json
include/: config.h  globalmutex.h  globalmutext.h  logger.h  networking.h  raft.h  raftconfig.h  raftconnect.h  raftsave.h  raftserver.h
proto/: raft.proto  raftserver.proto
src/: config.cpp  globalmutex.cpp  logger.cpp  networking.cpp  raft.cpp  raftconf.cpp  raftconfig.cpp  raftconnect.cpp  raftsave.cpp  raftserver.cpp
test/: grpc_test.cpp  logger_test.cpp  raftconf_test.cpp  raftconfig_test.cpp  raftconnect_test.cpp  raftserver_test_client.cpp  raftserver_test_server.cpp
test/Raft_test/paper_test/: 5_1.cpp
